Add GFF3ToFFConverter